--- a/frontend/project/src/components/Form/Form.scss
+++ b/frontend/project/src/components/Form/Form.scss
@@ -1,4 +1,4 @@
-@use './styles/variables' as *;
+@use '../../styles/variables' as *;
 @use 'sass:color';
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap');
 
