--- a/frontend/src/components/InterviewPrepPDF/InterviewPrep.scss
+++ b/frontend/src/components/InterviewPrepPDF/InterviewPrep.scss
@@ -41,7 +41,7 @@ $breakpoint-xl: 1200px;
   padding: 50px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
-  background: white;
+  // background: white;
 
   &__container {
     display: flex;
