--- a/frontend/src/components/Home/home.scss
+++ b/frontend/src/components/Home/home.scss
@@ -10,6 +10,7 @@ $breakpoint-xl: 1200px;
   position: relative;
   width: 100%;
   max-width: 1400px;
+  top: 50px;;
   margin: 0 auto;
   padding: 2rem;
   overflow: hidden;
