--- a/frontend/src/components/Home/home.scss
+++ b/frontend/src/components/Home/home.scss
@@ -8,10 +8,11 @@ $breakpoint-xl: 1200px;
 
 .home-container {
   position: relative;
+  // margin-bottom: ;
   width: 100%;
   max-width: 1400px;
   top: 50px;;
-  margin: 0 auto;
+  margin: 0 auto 120px  auto;
   padding: 2rem;
   overflow: hidden;
 }
